--- a/config/CGEDN/CGEDN-AIDS_large-syn_syn.ini
+++ b/config/CGEDN/CGEDN-AIDS_large-syn_syn.ini
@@ -4,10 +4,10 @@ gnn_filters=64-64-64
 tensor_neurons=64
 
 [Dataset]
-dataset=AIDS_700
+dataset=AIDS_large
 training_set=syn
 testing_set=syn
-syn_num=200
+syn_num=5
 
 [Training]
 lamb=0.01
