--- a/config/GEDGNN/GEDGNN-IMDB_large-syn_syn.ini
+++ b/config/GEDGNN/GEDGNN-IMDB_large-syn_syn.ini
@@ -1,9 +1,8 @@
 [Model]
-model_name=SimGNN
-gnn_filters=64-32-16
+model_name=GEDGNN
+gnn_filters=128-64-32
 tensor_neurons=16
-bins=16
-histogram=True
+hidden_dim=16
 
 [Dataset]
 dataset=IMDB_small
@@ -12,3 +11,4 @@ testing_set=syn
 syn_num=100
 
 [Training]
+value_loss_weight=1.0
