--- a/config/TaGSim/TaGSim-IMDB_large-syn_syn.ini
+++ b/config/TaGSim/TaGSim-IMDB_large-syn_syn.ini
@@ -1,14 +1,13 @@
 [Model]
-model_name=SimGNN
-gnn_filters=64-32-16
+model_name=TaGSim
+gnn_filters=128-64-32
 tensor_neurons=16
-bins=16
-histogram=True
 
 [Dataset]
-dataset=IMDB_small
+dataset=IMDB_large
 training_set=syn
 testing_set=syn
 syn_num=100
 
 [Training]
+
