--- a/config/GEDGNN/GEDGNN-IMDB_large-syn_syn.ini
+++ b/config/GEDGNN/GEDGNN-IMDB_large-syn_syn.ini
@@ -5,7 +5,7 @@ tensor_neurons=16
 hidden_dim=16
 
 [Dataset]
-dataset=IMDB_small
+dataset=IMDB_large
 training_set=syn
 testing_set=syn
 syn_num=100
